Published recent notebook

--- a/embra_connect_notebook/defaults/ui/config.ipynb
+++ b/embra_connect_notebook/defaults/ui/config.ipynb
@@ -6,15 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optional <styling>\n",
     "from IPython.core.display import HTML\n",
     "HTML(\"\"\"\n",
     "<style>\n",
     "body {\n",
     "    background: white;\n",
     "    font-family: system-ui;\n",
-    "    }\n",
+    "}\n",
     "\n",
-    "#jp-title-panel-title input{\n",
+    "#jp-title-panel-title input {\n",
     "    font-family: system-ui;\n",
     "    font-weight: 600;\n",
     "    font-size: 1rem;\n",
@@ -28,7 +29,8 @@
     "    color: #6A6A6Aff;\n",
     "}\n",
     "\n",
-    "#jp-left-stack > .lm-Widget, #jp-right-stack > .lm-Widget {\n",
+    "#jp-left-stack>.lm-Widget,\n",
+    "#jp-right-stack>.lm-Widget {\n",
     "    background: #EBEBEBff;\n",
     "}\n",
     "\n",
@@ -47,16 +49,20 @@
     ".lm-TabBar-content {\n",
     "    background: white;\n",
     "    color: white;\n",
+    "    border-radius: 0 12px 0 0;\n",
+    "    box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, .3);\n",
     "}\n",
     "\n",
     ".jp-InputPrompt {\n",
     "    letter-spacing: .7px;\n",
     "    font-weight: 700;\n",
+    "    color: #4f4f4f;\n",
     "}\n",
     "\n",
     ".jp-InputArea-editor {\n",
     "    border-radius: 10px;\n",
     "    letter-spacing: .3px;\n",
+    "    border: none;\n",
     "}\n",
     "\n",
     ".jp-Toolbar {\n",
@@ -67,7 +73,8 @@
     "    background: #EBEBEBff;\n",
     "}\n",
     "\n",
-    ".jp-InputGroup, .jp-FilterBox {\n",
+    ".jp-InputGroup,\n",
+    ".jp-FilterBox {\n",
     "    background: white;\n",
     "    border-radius: 4px;\n",
     "    font-family: system-ui;\n",
@@ -81,7 +88,7 @@
     "    width: 230px;\n",
     "}\n",
     "\n",
-    ".jp-InputGroup input:focus{\n",
+    ".jp-InputGroup input:focus {\n",
     "    outline: none;\n",
     "    box-shadow: none;\n",
     "}\n",
@@ -93,6 +100,7 @@
     "\n",
     ".jp-FileBrowser-toolbar .jp-ToolbarButtonComponent[data-command='launcher:create'] {\n",
     "    background: #308AFF;\n",
+    "    width: 40px;\n",
     "}\n",
     "\n",
     ".jp-DirListing-item.jp-mod-selected {\n",
@@ -103,13 +111,9 @@
     ".jp-Notebook .jp-Cell.jp-mod-active.jp-mod-dirty .jp-Collapser {\n",
     "    background: #FFA07A;\n",
     "}\n",
-    "  \n",
-    ".jp-Notebook .jp-Cell.jp-mod-active.jp-mod-dirty .jp-Collapser {\n",
-    "    background: #FFA07A;\n",
-    "}\n",
     "\n",
-    "#jp-main-dock-panel[data-mode='single-document'] .jp-MainAreaWidget > .jp-Toolbar {\n",
-    "box-shadow: 0 2rem 2rem 0 rgba(0, 0, 0, .1);\n",
+    "#jp-main-dock-panel[data-mode='single-document'] .jp-MainAreaWidget>.jp-Toolbar {\n",
+    "    box-shadow: 0 2rem 2rem 0 rgba(0, 0, 0, .1);\n",
     "}\n",
     "\n",
     ".jp-cell-toolbar {\n",
@@ -124,10 +128,6 @@
     ".jp-cell-toolbar:hover {\n",
     "    box-shadow: 0 2rem 2rem 0 rgba(0, 0, 0, .05);\n",
     "    opacity: 1;\n",
-    "}\n",
-    "\n",
-    ".jp-FileBrowser-toolbar .jp-ToolbarButtonComponent[data-command='launcher:create']  {\n",
-    "    width: 40px;\n",
     "}\n",
     "\n",
     ".jp-DirListing-headerItem.jp-id-modified {\n",
@@ -158,11 +158,11 @@
     "    letter-spacing: .2px;\n",
     "}\n",
     "\n",
-    ".jp-toast-button.jp-mod-link  {\n",
+    ".jp-toast-button.jp-mod-link {\n",
     "    color: #308AFF;\n",
     "}\n",
     "\n",
-    ".lm-SplitPanel[data-orientation='horizontal'] > .lm-SplitPanel-handle:after {\n",
+    ".lm-SplitPanel[data-orientation='horizontal']>.lm-SplitPanel-handle:after {\n",
     "    color: white;\n",
     "}\n",
     "\n",
@@ -184,9 +184,109 @@
     "button.jp-mod-styled.jp-mod-reject:hover {\n",
     "    background: #9E9E9Eff;\n",
     "}\n",
+    "\n",
+    ".jp-FileBrowser-toolbar .jp-Toolbar-item.jp-DropdownMenu,\n",
+    ".jp-FileBrowser-toolbar .jp-Toolbar-item.jp-ToolbarButton,\n",
+    ".jp-FileBrowser-toolbar .jp-Toolbar-item.jp-CommandToolbarButton {\n",
+    "    border-radius: 2px;\n",
+    "}\n",
+    "\n",
+    ".lm-MenuBar-item {\n",
+    "    border-radius: 2px;\n",
+    "}\n",
+    "\n",
+    "#menu-panel-wrapper {\n",
+    "    border-bottom: none;\n",
+    "    box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, .08);\n",
+    "}\n",
+    "\n",
+    ".jp-TreePanel>.lm-TabPanel-stackedPanel {\n",
+    "    box-shadow: none;\n",
+    "}\n",
+    "\n",
+    ".jp-TreePanel .lm-TabPanel-tabBar {\n",
+    "    border-bottom: unset;\n",
+    "    border-right: 1px solid var(--jp-layout-color3);\n",
+    "    border-top: 1px solid var(--jp-layout-color3);\n",
+    "    border-radius: 10px 10px 0px 0px;\n",
+    "    -webkit-border-radius: 10px 10px 0px 0px;\n",
+    "    -moz-border-radius: 10px 10px 0px 0px;\n",
+    "}\n",
+    "\n",
+    ".lm-Menu {\n",
+    "    padding: 9px 2px;\n",
+    "    background: white;\n",
+    "    color: var(--jp-ui-font-color0);\n",
+    "    border: none;\n",
+    "    font-size: var(--jp-ui-font-size1);\n",
+    "    box-shadow: .1rem .5rem .5rem 0 rgba(0, 0, 0, .04);\n",
+    "    border-radius: 6px;\n",
+    "}\n",
+    "\n",
+    ".jp-FileBrowser-toolbar .jp-FileActions .jp-ToolbarButtonComponent {\n",
+    "    border: 1px solid #f5f5f5;\n",
+    "    border-radius: 4px;\n",
+    "}\n",
+    "\n",
+    ".lm-MenuBar.lm-mod-active .lm-MenuBar-item.lm-mod-active {\n",
+    "    box-shadow: .3rem .3rem .5rem 0 rgba(0, 0, 0, .4);\n",
+    "}\n",
+    "\n",
+    ".xterm .xterm-viewport {\n",
+    "    border-radius: 12px;\n",
+    "    box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, .2);\n",
+    "}\n",
+    "\n",
+    "[data-term-theme='inherit'] .xterm .xterm-screen canvas {\n",
+    "    border: none;\n",
+    "}\n",
+    "\n",
+    ".jp-Dialog-content {\n",
+    "    border-radius: 9px;\n",
+    "    box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, .02);\n",
+    "}\n",
+    "\n",
+    "body[data-notebook='notebooks'] .jp-Notebook>*:first-child:not(:last-child) {\n",
+    "    box-shadow: 0 1rem 1rem 0 rgba(0, 0, 0, .02);\n",
+    "    border-radius: 8px;\n",
+    "}\n",
+    "\n",
+    "body[data-notebook='notebooks'] .jp-cell-toolbar {\n",
+    "    background: white;\n",
+    "}\n",
+    "\n",
+    ".jp-Notebook .jp-Cell.jp-mod-active .jp-Collapser {\n",
+    "    background: #eeee;\n",
+    "}\n",
+    "\n",
+    ".jp-CodeConsole .ͼo,\n",
+    ".jp-Notebook .ͼo {\n",
+    "    background: white;\n",
+    "}\n",
+    "\n",
+    ".jp-RenderedText pre,\n",
+    ".jp-RenderedJavaScript pre,\n",
+    ".jp-RenderedHTMLCommon pre {\n",
+    "    color: #4f4f4fbb;\n",
+    "}\n",
+    "\n",
+    ".jp-CodeCell.jp-mod-outputsScrolled .jp-Cell-outputArea {\n",
+    "    border-radius: 9px;\n",
+    "}\n",
+    "\n",
+    ".jp-CodeCell.jp-mod-outputsScrolled .jp-Cell-outputArea::after {\n",
+    "    box-shadow: none;\n",
+    "}\n",
     "</style> \n",
     "\"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
